name of the project to lowercase just because...

--- a/SD2021-TP1-API/.project
+++ b/SD2021-TP1-API/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SD2021-TP1-API</name>
+	<name>sd2021-tp1-api</name>
 	<comment></comment>
 	<projects>
 	</projects>
