--- a/sd2021-tp1-api/pom.xml
+++ b/sd2021-tp1-api/pom.xml
@@ -66,61 +66,37 @@
 	</build>
 	<dependencies>
 		<dependency>
-			<groupId>com.gembox</groupId>
-			<artifactId>gembox-spreadsheet</artifactId> <!-- You can choose other version -->
-			<exclusions>
-				<exclusion>
-					<groupId>stax</groupId>
-					<artifactId>stax-api</artifactId>
-				</exclusion>
-			</exclusions>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>30.1.1-jre</version>
 		</dependency>
-		<dependency>
-			<groupId>jakarta.xml.ws</groupId>
-			<artifactId>jakarta.xml.ws-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.xml.ws</groupId>
-			<artifactId>rt</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.org.apache.xml.internal</groupId>
-			<artifactId>resolver</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.glassfish.jersey.media</groupId>
-			<artifactId>jersey-media-json-jackson</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.glassfish.jersey.containers</groupId>
-			<artifactId>jersey-container-jdk-http</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.glassfish.jersey.inject</groupId>
-			<artifactId>jersey-hk2</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-		</dependency>
+			<dependency>
+				<groupId>com.sun.xml.bind</groupId>
+				<artifactId>jaxb-ri</artifactId>
+				<type>pom</type>
+			</dependency>
+			<dependency>
+				<groupId>jakarta.xml.ws</groupId>
+				<artifactId>jakarta.xml.ws-api</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>jakarta.servlet</groupId>
+				<artifactId>jakarta.servlet-api</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>sd2021</groupId>
+				<artifactId>sd2021-tp1</artifactId>
+			</dependency>			
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
+
+
 			<dependency>
-				<groupId>org.glassfish.jersey.media</groupId>
-				<artifactId>jersey-media-json-jackson</artifactId>
-				<version>3.0.1</version>
-			</dependency>
-			<dependency>
-				<groupId>org.glassfish.jersey.containers</groupId>
-				<artifactId>jersey-container-jdk-http</artifactId>
+				<groupId>com.sun.xml.bind</groupId>
+				<artifactId>jaxb-ri</artifactId>
 				<version>3.0.0</version>
-			</dependency>
-			<dependency>
-				<groupId>org.glassfish.jersey.inject</groupId>
-				<artifactId>jersey-hk2</artifactId>
-				<version>3.0.0</version>
+				<type>pom</type>
 			</dependency>
 			<dependency>
 				<groupId>jakarta.xml.ws</groupId>
@@ -128,24 +104,20 @@
 				<version>3.0.0</version>
 			</dependency>
 			<dependency>
-				<groupId>com.sun.xml.ws</groupId>
-				<artifactId>rt</artifactId>
-				<version>3.0.0</version>
+				<groupId>jakarta.servlet</groupId>
+				<artifactId>jakarta.servlet-api</artifactId>
+				<version>5.0.0</version>
 			</dependency>
 			<dependency>
-				<groupId>com.sun.org.apache.xml.internal</groupId>
-				<artifactId>resolver</artifactId>
-				<version>20050927</version>
-			</dependency>
-			<dependency>
-				<groupId>com.gembox</groupId>
-				<artifactId>gembox-spreadsheet</artifactId>
-				<version>1.1.1246</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.commons</groupId>
-				<artifactId>commons-lang3</artifactId>
-				<version>3.12.0</version>
+				<groupId>sd2021</groupId>
+				<artifactId>sd2021-tp1</artifactId>
+				<version>1.0</version>
+				<exclusions>
+					<exclusion>
+						<groupId>stax</groupId>
+						<artifactId>stax-api</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
