--- a/sd2021-tp1-api/Dockerfile
+++ b/sd2021-tp1-api/Dockerfile
@@ -10,6 +10,9 @@ COPY target/*jar-with-dependencies.jar sd2021.jar
 # copy the file of properties to the docker image
 COPY trab.props trab.props
 
+# copy the keystore and truststore to the docker image
+COPY *.ks /home/sd/
+
 # run Discovery when starting the docker image
 CMD ["java", "-cp", "/home/sd/sd2021.jar", \
 "sd2021.aula2.server.UserServer"]
