--- a/sd2021-tp1-api/trab.props
+++ b/sd2021-tp1-api/trab.props
@@ -8,3 +8,11 @@ SHEETS_SOAP_SERVER_MAINCLASS=
 SHEETS_SOAP_PORT=8080
 DISCOVERY_MULTICAST_IP=226.226.226.226
 DISCOVERY_MULTICAST_PORT=2266
+USERS_SERVER_KEYSTORE=userserver.ks
+USERS_SERVER_KEYSTORE_PWD=bla
+SHEETS_SERVER_KEYSTORE=sheetsserver.ks
+SHEETS_SERVER_KEYSTORE_PWD=bla
+CLIENT_TRUSTSTORE=client-truststore.ks
+CLIENT_TRUSTSTORE_PWD=changeit
+SERVERS_EXTRA_ARGS=mysecret
+
